--- a/FitnessCoach/WebContent/weekplaner.xhtml
+++ b/FitnessCoach/WebContent/weekplaner.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <head>
 	<title>FitnessCoach</title>
@@ -15,7 +16,100 @@
 
 
 	<ui:define name="content">
-	    Add your header here or delete to use the default
+	    <h:form id="carForm">  
+  
+    <p:fieldset legend="Ihre verüfgbaren Trainingseinheiten">  
+  
+        <p:dataGrid id="availableWorkouts" var="workout"  
+                    value="#{workoutBean.workout}" columns="3">  
+  
+            <p:column>  
+  
+                <p:panel id="pnl" header="#{}" style="text-align:center">  
+                    <h:panelGrid columns="1" style="width:100%">  
+                        <p:graphicImage value="/images/cars/#{car.manufacturer}.jpg"/>  
+                    </h:panelGrid>  
+                </p:panel>  
+  
+                <p:draggable for="pnl" revert="true"  
+                        handle=".ui-panel-titlebar" stack=".ui-panel"/>  
+  
+            </p:column>  
+  
+        </p:dataGrid>  
+  
+    </p:fieldset>  
+  
+    <p:fieldset id="selectedCars" legend="Selected Cars" style="margin-top:20px">  
+  
+        <p:outputPanel id="dropArea">  
+  
+            <h:outputText value="!!!Drop here!!!"  
+                    rendered="#{empty tableBean.droppedCars}"  
+                    style="font-size:24px;" />  
+  
+            <p:dataTable var="car" value="#{tableBean.droppedCars}"  
+                    rendered="#{not empty tableBean.droppedCars}">  
+  
+                <p:column headerText="Model">  
+                    <h:outputText value="#{car.model}" />  
+                </p:column>  
+  
+                <p:column headerText="Year">  
+                    <h:outputText value="#{car.year}" />  
+                </p:column>  
+  
+                <p:column headerText="Manufacturer">  
+                    <h:outputText value="#{car.manufacturer}" />  
+                </p:column>  
+  
+                <p:column headerText="Color">  
+                    <h:outputText value="#{car.color}" />  
+                </p:column>  
+  
+                 <p:column style="width:32px">  
+                    <p:commandButton update=":carForm:display"  
+                        oncomplete="PF('carDialog').show()"  
+                        icon="ui-icon-search">  
+                        <f:setPropertyActionListener value="#{car}"  
+                                    target="#{tableBean.selectedCar}" />  
+                    </p:commandButton>  
+                </p:column>  
+            </p:dataTable>  
+  
+        </p:outputPanel>  
+  
+    </p:fieldset>  
+  
+    <p:droppable for="selectedCars" tolerance="touch" activeStyleClass="ui-state-highlight" datasource="availableCars" onDrop="handleDrop">  
+        <p:ajax listener="#{tableBean.onCarDrop}" update="dropArea availableCars" />  
+    </p:droppable>  
+  
+    <p:dialog header="Car Detail" widgetVar="carDialog" resizable="false" draggable="false"  
+              width="200" showEffect="fade" hideEffect="fade" modal="true">  
+  
+        <h:panelGrid id="display" columns="2" cellpadding="4">  
+  
+            <f:facet name="header">  
+                <p:graphicImage value="/images/cars/#{tableBean.selectedCar.manufacturer}.jpg"/>  
+            </f:facet>  
+  
+            <h:outputText value="Model:" />  
+            <h:outputText value="#{tableBean.selectedCar.model}"/>  
+  
+            <h:outputText value="Year:" />  
+            <h:outputText value="#{tableBean.selectedCar.year}"/>  
+  
+            <h:outputText value="Manufacturer:" />  
+            <h:outputText value="#{tableBean.selectedCar.manufacturer}"/>  
+  
+            <h:outputText value="Color:" />  
+            <h:outputText value="#{tableBean.selectedCar.color}"/>  
+        </h:panelGrid>  
+    </p:dialog>  
+  
+  
+</h:form>  
 	</ui:define>
 
 
