--- a/FitnessCoach/WebContent/index.xhtml
+++ b/FitnessCoach/WebContent/index.xhtml
@@ -14,23 +14,23 @@
 
 <body>
 
-<ui:composition template="WEB-INF/template/common/commonLayout2.xhtml">
+<ui:composition template="template/common/commonLayout2.xhtml">
 
 	<ui:define name="content">
-
-		<h:outputText value="Bist du neu hier oder hast du bereits einen Account?" /> 
-	
+		
+		<h2>Bist du neu hier oder hast du bereits einen Account?</h2> 
+	<h:form>
 		<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">  
 
  		<p:selectOneRadio id="options" value="#{userBean.userstate}">
            	 <f:selectItem itemLabel="Einloggen" itemValue="1" itemDisabled="false"/>  
            	 <f:selectItem itemLabel="Registrieren" itemValue="2" />  
        	 </p:selectOneRadio>
-       	 
-       	 <h:commandButton value="Weiter" action="userstate"/>  
+       	 <br/>
+       	 <p:commandButton value="Weiter" action="userstate"/>  
   
    		 </h:panelGrid>  
-   		 
+   	</h:form>	 
 	</ui:define>
 
 
