mittwochnachmittag freunde sichtbar

--- a/FitnessCoach/WebContent/weekplaner.xhtml
+++ b/FitnessCoach/WebContent/weekplaner.xhtml
@@ -7,12 +7,12 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-<head>
+<h:head>
 	<title>FitnessCoach</title>
-</head>
+</h:head>
 
-<body>
-<ui:composition template="WEB-INF/template/common/commonLayout.xhtml">
+<h:body>
+<ui:composition template="template/common/commonLayout.xhtml">
 
 
 	<ui:define name="content">
@@ -114,5 +114,5 @@
 
 
 </ui:composition>
-</body>
+</h:body>
 </html>
