--- a/FitnessCoach/WebContent/weekplaner.xhtml
+++ b/FitnessCoach/WebContent/weekplaner.xhtml
@@ -21,7 +21,7 @@
     <p:fieldset legend="Ihre verüfgbaren Trainingseinheiten">  
   
         <p:dataGrid id="availableWorkouts" var="workout"  
-                    value="#{workoutBean.workout}" columns="3">  
+                    value="#{weekPlanerBean.workout}" columns="3">  
   
             <p:column>  
   
