--- a/FitnessCoach/WebContent/weekplaner.xhtml
+++ b/FitnessCoach/WebContent/weekplaner.xhtml
@@ -16,23 +16,22 @@
 
 
 	<ui:define name="content">
-	    <h:form id="carForm">  
+	<h:form id="dragform">  
   
-    <p:fieldset legend="Ihre verüfgbaren Trainingseinheiten">  
+    <p:fieldset legend="Ihre verfügbaren Trainingseinheiten">  
   
         <p:dataGrid id="availableWorkouts" var="workout"  
-                    value="#{weekPlanerBean.workout}" columns="3">  
+                    value="#{weekPlanerBean.listWorkout}" columns="3">  
   
             <p:column>  
   
-                <p:panel id="pnl" header="#{}" style="text-align:center">  
+                <p:panel id="pnl" header="#{workout.name}" style="text-align:center">  
                     <h:panelGrid columns="1" style="width:100%">  
-                        <p:graphicImage value="/images/cars/#{car.manufacturer}.jpg"/>  
+                        <p:graphicImage value="/images/#{weekPlanerBean.workouts.sport}.jpg"/>  
                     </h:panelGrid>  
                 </p:panel>  
   
-                <p:draggable for="pnl" revert="true"  
-                        handle=".ui-panel-titlebar" stack=".ui-panel"/>  
+                <p:draggable for="pnl" revert="true" handle=".ui-panel-titlebar" stack=".ui-panel"/>  
   
             </p:column>  
   
@@ -40,39 +39,39 @@
   
     </p:fieldset>  
   
-    <p:fieldset id="selectedCars" legend="Selected Cars" style="margin-top:20px">  
+    <p:fieldset id="monday" legend="Montag" style="margin-top:20px">  
   
         <p:outputPanel id="dropArea">  
   
             <h:outputText value="!!!Drop here!!!"  
-                    rendered="#{empty tableBean.droppedCars}"  
-                    style="font-size:24px;" />  
+                    rendered="#{empty weekPlanerBean.droppedWorkoutMo}"  
+                    style="font-size:18px;" />  
   
-            <p:dataTable var="car" value="#{tableBean.droppedCars}"  
-                    rendered="#{not empty tableBean.droppedCars}">  
+            <p:dataTable var="wkt" value="#{weekPlanerBean.droppedWorkoutMo}"  
+                    rendered="#{not empty weekPlanerBean.droppedWorkoutMo}">  
   
-                <p:column headerText="Model">  
-                    <h:outputText value="#{car.model}" />  
+                <p:column headerText="Bezeichnung">  
+                    <h:outputText value="#{wkt.name}" />  
                 </p:column>  
   
-                <p:column headerText="Year">  
-                    <h:outputText value="#{car.year}" />  
+                <p:column headerText="Sport">  
+                    <h:outputText value="#{wkt.sport}" />  
                 </p:column>  
   
-                <p:column headerText="Manufacturer">  
-                    <h:outputText value="#{car.manufacturer}" />  
+                <p:column headerText="Power-Grad">  
+                    <h:outputText value="#{wkt.fierce}" />  
                 </p:column>  
   
-                <p:column headerText="Color">  
-                    <h:outputText value="#{car.color}" />  
+                <p:column headerText="Dauer">  
+                    <h:outputText value="#{wkt.time}" />  
                 </p:column>  
   
                  <p:column style="width:32px">  
-                    <p:commandButton update=":carForm:display"  
-                        oncomplete="PF('carDialog').show()"  
+                    <p:commandButton update=":dragform:display"  
+                        oncomplete="PF('wDialog').show()"  
                         icon="ui-icon-search">  
-                        <f:setPropertyActionListener value="#{car}"  
-                                    target="#{tableBean.selectedCar}" />  
+                        <f:setPropertyActionListener value="#{wkt}"  
+                                    target="#{weekPlanerBean.workouts}" />  
                     </p:commandButton>  
                 </p:column>  
             </p:dataTable>  
@@ -81,30 +80,28 @@
   
     </p:fieldset>  
   
-    <p:droppable for="selectedCars" tolerance="touch" activeStyleClass="ui-state-highlight" datasource="availableCars" onDrop="handleDrop">  
-        <p:ajax listener="#{tableBean.onCarDrop}" update="dropArea availableCars" />  
+    <p:droppable for="Workouts" tolerance="touch" activeStyleClass="ui-state-highlight" datasource="availableWorkouts" onDrop="handleDrop">  
+        <p:ajax listener="#{weekPlanerBean.onWorkoutDrop}" update="dropArea availableWorkouts" />  
     </p:droppable>  
   
-    <p:dialog header="Car Detail" widgetVar="carDialog" resizable="false" draggable="false"  
+    <p:dialog header="Workout Details" widgetVar="wDialog" resizable="false" draggable="false"  
               width="200" showEffect="fade" hideEffect="fade" modal="true">  
   
         <h:panelGrid id="display" columns="2" cellpadding="4">  
   
             <f:facet name="header">  
-                <p:graphicImage value="/images/cars/#{tableBean.selectedCar.manufacturer}.jpg"/>  
+                <p:graphicImage value="/images/#{weekPlanerBean.workouts.sport}.jpg"/>  
             </f:facet>  
   
-            <h:outputText value="Model:" />  
-            <h:outputText value="#{tableBean.selectedCar.model}"/>  
+            <h:outputText value="Bezeichnung:" />  
+            <h:outputText value="#{weekPlanerBean.workouts.name}"/>  
   
-            <h:outputText value="Year:" />  
-            <h:outputText value="#{tableBean.selectedCar.year}"/>  
+            <h:outputText value="Power-Grad" />  
+            <h:outputText value="#{weekPlanerBean.workouts.fierce}"/>  
   
-            <h:outputText value="Manufacturer:" />  
-            <h:outputText value="#{tableBean.selectedCar.manufacturer}"/>  
-  
-            <h:outputText value="Color:" />  
-            <h:outputText value="#{tableBean.selectedCar.color}"/>  
+            <h:outputText value="Dauer" />  
+            <h:outputText value="#{weekPlanerBean.workouts.time}"/>  
+
         </h:panelGrid>  
     </p:dialog>  
   
